DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jun-19-2010 patrick     Reverted the change to gadgt::AnalogProxy that allowed
                        access to the raw device data. This change broke the
                        use of analog devices in a cluster configuration.
                        NEW VERSION: 1.3.32
Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                        devices.
                        Submitted by Carsten Neumann.
                        NEW VERSION: 1.3.31
May-08-2010 patrick     Changed window/mouse interaction for the X11 case.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.30
Apr-28-2010 patrick     Changed window/mouse interaction on Mac OS X.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.29
Mar-25-2010 patrick     Changed window/mouse interaction on Windows.
                        Submitted by Doug McCorkle.
                        NEW VERSION: 1.3.28
Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
                        pure virtual methods in gadget::InputArea are now
                        named lockMouseInternal() and unlockMouseInternal().
                        NEW VERSION: 1.3.27
Feb-08-2010 patrick     Changed gadget::Event::getSource() to return a
                        reference instead of a pointer. Added a non-const
                        overload of same.
                        NEW VERSION: 1.3.26
Jan-02-2010 patrick     Added public virtual methods
                        gadget::InputArea::lockMouse() and
                        gadget::InputArea::unlockMouse() so that code that gets
                        a gadget::InputArea reference can programatically lock
                        and unlock the mouse pointer.
                        NEW VERSION: 1.3.25